# accountsservice

./: .gitignore  Makefile.am  NEWS  autogen.sh  configure.ac
data/: Makefile.am  accountsservice  org.freedesktop.Accounts.User.xml
doc/: Makefile.am
doc/libaccountsservice/: Makefile.am  libaccountsservice-docs.xml  libaccountsservice-sections.txt  libaccountsservice.types
po/: LINGUAS  accounts-service.pot  ar.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  fa_IR.po  fi.po  fr.po  ga.po  gl.po  he.po  hi.po  hu.po  ia.po  id.po  it.po  ja.po  ka.po  kk.po  ko.po  lt.po  lv.po  nl.po  pa.po  pl.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sr@latin.po  (+7 more)
src/: Makefile.am  daemon.c  daemon.h  main.c  pam-password-helper.c  user.c  user.h  util.c  util.h
src/libaccountsservice/: Makefile.am  accountsservice.deps  act-user-manager.c  act-user-manager.h  act-user-private.h  act-user.c  act-user.h
src/pam-pin/: Makefile.am  pam-module.c
